tests/ui/list_repeat_str.stderr
[tests/ui/list_repeat_str.pea:2:17-2:22] error: mismatched types: expected `i64`, found: `[u8]`

error: aborting due to 1 previous error

