tests/ui/list_repeat_str.pea
fn main() {
    let a = [3; b"abc"];
}
